# lumni

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_TOKEN_SETUP.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  alembic.ini  all_catalog_test_results.json  config.example.json  docker-compose.yml  litellm_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh
.cursor/plans/: python_migration_implementation_bc932250.plan.md
.github/: DEVOPS_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.md  ci.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 20251208194946_add_composite_indexes.py  8e1644e7ce8c_remove_vpn_endpoints_table.py
app/: main.py
app/api/: middleware.py  middleware_rate_limit.py
app/api/v1/: routes.py  schemas.py
app/cli/: __init__.py  main.py  models.py  monitor.py  providers.py  rates.py  settings.py  usage.py  utils.py
app/config/: __init__.py  manager.py  pricing.py  rate_limits.py
app/core/: cache.py  circuit_breaker.py  litellm_client.py  portkey_client.py  provider_health_checker.py  retry.py
app/models/: benchmark_selector.py  benchmarks.py  categorization.py  task_classifier.py
app/monitoring/: tracker.py
app/storage/: database.py  models.py  repositories.py  transaction.py
app/utils/: error_context.py  exceptions.py  logger.py
docs/: ACADEMIC_FRAMEWORK.md  BENCHMARKS.md  CLI_DESIGN_GUIDELINES.md  FREE_MODELS_CATALOGUE.md  GITHUB_ROUTER_COMPATIBILITY_RECOMMENDATION.md  MODEL_CATALOG.md  MODEL_TEST_RESULTS.md  RATE_LIMITS.md  cli_demonstration.ipynb
scripts/: add-to-path.bat  add-to-path.sh  create_cli_demo.py  init.bat  init.sh  load-env.sh  test_all_catalog_models.py
tests/: conftest.py
tests/test_api/: test_chat_endpoint.py  test_models_endpoint.py  test_providers_endpoint.py  test_usage_endpoint.py
tests/test_core/: test_circuit_breaker.py  test_litellm_client.py  test_retry.py
tests/test_integration/: test_fallback_logic.py  test_load.py  test_rate_limiting.py  test_real_api_calls.py  test_real_http_endpoint.py
tests/test_models/: test_benchmark_selector.py  test_task_classifier.py
tests/test_security/: test_auth.py  test_input_validation.py  test_rate_limiting.py
thoughts/shared/handoffs/general/: 2025-12-08_14-03-16_rebrand-to-lumni-and-release-preparation.md
